--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <nav class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -20,12 +20,14 @@
                 <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
         </div>
-    </div>
+    </nav>
+    <!-- Changed from div to nav -->
     <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <!-- added 'id="search-engine-optimization"' so anchor will work -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO" class="float-left" />
+            <!-- added alt tag to image -->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -71,12 +73,13 @@
         </div>
         <!-- added alt tags -->
     </div>
-    <div class="footer">
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
+    <!-- replaced <div> with <footer> -->
 </body>
 
 </html>
