updated alt tags and heading attribute 4

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
      <!-- created and linked reset.css -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon SEO, Reputation Management, and Social Media Marketing</title>
     <!-- Updated Title from 'Website' -->
 </head>
 
@@ -22,7 +22,8 @@
         </div>
     </nav>
     <!-- Changed from div to nav -->
-    <div class="hero"></div>
+    <div class="hero" alt="Marketing Meeting"></div>
+    <!-- added alt tag for hero image -->
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <!-- added 'id="search-engine-optimization"' so anchor will work -->
@@ -74,7 +75,8 @@
         <!-- added alt tags -->
     </div>
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
+        <!-- Changed h2 to h4 -->
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
