--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <!-- added alt tags -->
-    <div class="benefits">
+    <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="lead generation"/>
@@ -73,7 +73,8 @@
             </p>
         </div>
         <!-- added alt tags -->
-    </div>
+    </aside>
+    <!-- changed from div to aside -->
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <!-- Changed h2 to h4 -->
