--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- added alt tag for hero image -->
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <!-- added 'id="search-engine-optimization"' so anchor will work -->
+            <!-- added 'id="search-engine-optimization" so anchor will work -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO" class="float-left" />
             <!-- added alt tag to image -->
             <h2>Search Engine Optimization</h2>
